@@ -17,14 +17,11 @@ def DOCKER_REGISTRY="hub.docker.com"
 //def DOCKER_ORGANISATION="nabla"
 def DOCKER_TAG="latest"
 //def DOCKER_USERNAME="nabla"
-def DOCKERNAME="ansible-jenkins-slave-docker
+def DOCKER_NAME="ansible-jenkins-slave-docker"
 
 def DOCKER_REGISTRY_URL="https://${DOCKER_REGISTRY}"
 def DOCKER_REGISTRY_CREDENTIAL='jenkins'
-//def DOCKER_BUILD_TAG="${env.DOCKER_TAG}"+"_"+"${env.BUILD_NUMBER}"
-//def DOCKER_BUILD_IMG="nabla/${DOCKERNAME}-build"
-//def DOCKER_RUNTIME_IMG="nabla/${DOCKERNAME}-runtime"
-def DOCKER_IMAGE="${DOCKER_REGISTRY}/aandrieu/${DOCKERNAME}:${DOCKER_TAG}"
+def DOCKER_IMAGE="${DOCKER_REGISTRY}/aandrieu/${DOCKER_NAME}:${DOCKER_TAG}"
 
 //JENKINS-42369 : Docker options need to be defined outside of pipeline
 def DOCKER_OPTS = [
@@ -32,7 +29,7 @@ def DOCKER_OPTS = [
 //    '--pid=host',
 //    '--dns-search=nabla.mobi',
 //    '--init',
-//    '-v /var/run/docker.sock:/var/run/docker.sock',
+    '-v /var/run/docker.sock:/var/run/docker.sock',
 // workspace is needed for SonarQube access to sonar-scanner
     '-v /workspace/slave/tools/:/workspace/slave/tools/',
     '-v /usr/local/sonar-build-wrapper/:/usr/local/sonar-build-wrapper/',
@@ -46,6 +43,15 @@ def DOCKER_OPTS = [
 //  '-v /etc/timezone:/etc/timezone:ro',
 //  '-v /etc/localtime:/etc/localtime:ro',
 ].join(" ")
+
+def DOCKER_NAME_BUILD="ansible-jenkins-slave-docker"
+// TODO def DOCKER_BUILD_TAG="${BUILD_ID}" or remove after push to registry
+//def DOCKER_BUILD_TAG="${env.DOCKER_TAG}"+"_"+"${env.BUILD_NUMBER}"
+def DOCKER_BUILD_TAG="latest"
+def DOCKER_BUILD_IMG="${DOCKER_REGISTRY}/${DOCKER_ORGANISATION}/${DOCKER_NAME_BUILD}:${DOCKER_BUILD_TAG}"
+def DOCKER_RUNTIME_TAG="latest"
+def DOCKER_NAME_RUNTIME="test"
+def DOCKER_RUNTIME_IMG="${DOCKER_REGISTRY}/${DOCKER_ORGANISATION}/${DOCKER_NAME_RUNTIME}:${DOCKER_RUNTIME_TAG}"
 
 String ARTIFACTS = ['*_VERSION.TXT',
                 '**/target/*.log',
@@ -121,20 +127,23 @@ pipeline {
     environment {
         JENKINS_CREDENTIALS = 'jenkins-ssh'
         GIT_BRANCH_NAME = "${params.GIT_BRANCH_NAME}"
-        BRANCH_JIRA = "${env.BRANCH_NAME}".replaceAll("feature/","")
-        PROJECT_BRANCH = "${env.GIT_BRANCH}".replaceFirst("origin/","")
-        //SONAR_BRANCH = sh(returnStdout: true, script: "echo ${env.BRANCH_NAME} | cut -d'/' -f 2-").trim()
+        //BRANCH_JIRA = "${env.BRANCH_NAME}".replaceAll("feature/","")
+        //PROJECT_BRANCH = "${env.GIT_BRANCH}".replaceFirst("origin/","")
         SONAR_INSTANCE = "sonardev"
         SONAR_USER_HOME = "/tmp"
         CARGO_RMI_PORT = "${params.CARGO_RMI_PORT}"
-        WORKSPACE_SUFFIX = "${params.WORKSPACE_SUFFIX}"
-        DRY_RUN = "${params.DRY_RUN}"
-        CLEAN_RUN = "${params.CLEAN_RUN}"
-        DEBUG_RUN = "${params.DEBUG_RUN}"
+        //WORKSPACE_SUFFIX = "${params.WORKSPACE_SUFFIX}"
         //echo "JOB_NAME: ${env.JOB_NAME} : ${env.JOB_BASE_NAME}"
         //TARGET_PROJECT = sh(returnStdout: true, script: "echo ${env.JOB_NAME} | cut -d'/' -f -1").trim()
         //BRANCH_NAME = "${env.BRANCH_NAME}".replaceAll("feature/","")
         BUILD_ID = "${env.BUILD_ID}"
+        DRY_RUN = "${params.DRY_RUN}".toBoolean()
+        CLEAN_RUN = "${params.CLEAN_RUN}".toBoolean()
+        DEBUG_RUN = "${params.DEBUG_RUN}".toBoolean()
+        MVNW_VERBOSE = "${params.MVNW_VERBOSE}".toBoolean()
+        RELEASE = "${params.RELEASE}".toBoolean()
+        RELEASE_BASE = "${params.RELEASE_BASE}"
+        RELEASE_VERSION = "${params.RELEASE_VERSION}"
         GIT_PROJECT = "nabla"
         GIT_BROWSE_URL = "https://github.com/AlbanAndrieu/${GIT_PROJECT}/"
         //GIT_URL = "https://github.com/AlbanAndrieu/${GIT_PROJECT}.git"
@@ -142,7 +151,7 @@ pipeline {
         //DOCKER_TAG=buildDockerTag("${env.BRANCH_NAME}")
     }
     options {
-        //skipDefaultCheckout()
+        skipDefaultCheckout()
         //disableConcurrentBuilds()
         ansiColor('xterm')
         timeout(time: 120, unit: 'MINUTES')
@@ -228,33 +237,26 @@ pipeline {
 
                         //} // dir
 
-                            script {
+                        script {
+                            gitCheckoutTEST() {
 
-                            if (params.RELEASE && params.RELEASE_BASE) {
-                                sh "git fetch --tags; git checkout ${params.RELEASE_BASE}"
-                    }
+                            if (!isReleaseBranch()) { abortPreviousRunningBuilds() }
 
-                            if (! isReleaseBranch()) { abortPreviousRunningBuilds() }
-                            env.GIT_COMMIT = getCommitId()
-                            echo "GIT_COMMIT: ${GIT_COMMIT} - ${env.GIT_COMMIT}"
+                                getEnvironementData(filePath: "./step-2-0-0-build-env.sh", DEBUG_RUN: params.DEBUG_RUN)
 
                             if (params.DEBUG_RUN) {
-                        ansiColor('xterm') {
+sh '''
+set -e && id && cat /etc/hostname
+
+exit 0
+'''
+
 sh '''
 set -e
 #set -xve
 
 echo "USER : $USER"
 echo "SHELL : $SHELL"
-
-id
-cat /etc/hostname
-
-cd ./bm/Scripts/release
-
-./step-2-0-0-build-env.sh || exit 1
-
-#./step-2-2-1-build-before-java.sh || exit 1
 
 echo "PATH : ${PATH}"
 echo "JAVA_HOME : ${JAVA_HOME}"
@@ -295,16 +297,15 @@ wget --http-user=admin --http-password=Motdepasse12 "http://home.nabla.mobi:8280
 
 exit 0
 '''
-                            } //ansiColor
+                                } // if
+                            } // gitCheckoutTEST
 
-                            } // if
-
-                            stash excludes: '**/target/, **/.bower/, **/.tmp/, **/.git, **/.repository/, **/.mvn/, **/bower_components/, **/node/, **/node_modules/, **/npm/, **/.npm/, **/coverage/, **/build/, docs/, hooks/, ansible/, screenshots/', includes: '**', name: 'sources'
+                            stash excludes: '**/target/, **/.bower/, **/.tmp/, **/.git, **/.repository/, **/.mvn/, **/bower_components/, **/node/, **/node_modules/, **/npm/, **/coverage/, **/build/, docs/, hooks/, ansible/, screenshots/', includes: '**', name: 'sources'
                             stash includes: "**/.git/**/*", useDefaultExcludes: false , name: 'git'
-                            stash includes: ".mvn/", name: 'sources-tools'
+                            stash includes: "**/.mvn/", name: 'sources-tools'
 
                         } // script
-                    } //steps
+                    } // steps
                     post {
                         success {
                                 script {
@@ -319,42 +320,42 @@ exit 0
                             label 'docker-inside'
                         }
                     }
-                    //when {
-                    //    expression { BRANCH_NAME ==~ /release|master|develop|PR-.*|feature\/.*|bugfix\/.*/ }
-                    //}
+                    when {
+                        expression { BRANCH_NAME ==~ /release|master|develop|feature\/.*/ }
+                    }
                     steps {
+                        script {
+
                             checkout scm
 
-                            script {
-                                sh(returnStdout: true, script: "echo ${DOCKER_BUILD_IMG} | cut -d'/' -f -1").trim()
-                                DOCKER_BUILD_ARGS = ["--build-arg JENKINS_HOME=/home/jenkins"].join(" ")
-                                if (params.CLEAN_RUN) {
-                                    DOCKER_BUILD_ARGS = ["--no-cache",
-                                                         "--pull",
-                                                         //"--target builder", // See issue https://issues.jenkins-ci.org/browse/JENKINS-44609?page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel&showAll=true
-                                                         ].join(" ")
-                                }
-                                DOCKER_BUILD_ARGS = [ "${DOCKER_BUILD_ARGS}",
-                                                      "--label 'version=1.0.1'",
-                                                      "--label 'maintainer=Alban Andrieu <alban.andrieu@gmail.com>'",
-                                                    ].join(" ")
-                                docker.withRegistry("${DOCKER_REGISTRY_URL}", "${DOCKER_REGISTRY_CREDENTIAL}") {
-                                    //def container = docker.build("${DOCKER_BUILD_IMG}:${env.BUILD_ID}", "${DOCKER_BUILD_ARGS} . ")
-                                    def container = docker.build("${DOCKER_BUILD_IMG}", "${DOCKER_BUILD_ARGS} . ")
-                                    container.inside {
-                                        sh 'echo test'
-                                    }
-                                    if (params.DRY_RUN) {
-                                        //pushDockerImage(container, "${env.DOCKER_BUILD_IMG}", "${env.DOCKER_TAG}")
-                                        ///* Push the container to the custom Registry */
-                                        //customImage.push()
-                                        //customImage.push('latest')
-                                    }
-                                }
+                            sh(returnStdout: true, script: "echo ${DOCKER_BUILD_IMG} | cut -d'/' -f -1").trim()
+                            DOCKER_BUILD_ARGS = ["--build-arg JENKINS_HOME=/home/jenkins"].join(" ")
+                            if (params.CLEAN_RUN) {
+                                DOCKER_BUILD_ARGS = ["--no-cache",
+                                                     "--pull",
+                                                     //"--target builder", // See issue https://issues.jenkins-ci.org/browse/JENKINS-44609?page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel&showAll=true
+                                                     ].join(" ")
                             }
+                            DOCKER_BUILD_ARGS = [ "${DOCKER_BUILD_ARGS}",
+                                                  "--label 'version=1.0.3'",
+                                                  "--label 'maintainer=Alban Andrieu <alban.andrieu@gmail.com>'",
+                                                ].join(" ")
+                            docker.withRegistry("${DOCKER_REGISTRY_URL}", "${DOCKER_REGISTRY_CREDENTIAL}") {
+                                //def container = docker.build("${DOCKER_BUILD_IMG}:${env.BUILD_ID}", "${DOCKER_BUILD_ARGS} . ")
+                                def container = docker.build("${DOCKER_BUILD_IMG}", "${DOCKER_BUILD_ARGS} . ")
+                                container.inside {
+                                    sh 'echo test'
+                                }
+                                if (params.DRY_RUN) {
+                                    //pushDockerImage(container, "${env.DOCKER_BUILD_IMG}", "${env.DOCKER_TAG}")
+                                    ///* Push the container to the custom Registry */
+                                    //customImage.push()
+                                    //customImage.push('latest')
+                                }
+                            } // withRegistry
                             //dockerFingerprintFrom dockerfile: 'Dockerfile', image: "${DOCKER_BUILD_IMG}:${env.BUILD_ID}"
                             dockerFingerprintFrom dockerfile: './docker/ubuntu16/Dockerfile', image: "${DOCKER_BUILD_IMG}"
-
+                        } // script
                     } // steps
                     post {
                         success {
@@ -382,14 +383,13 @@ exit 0
                 PROJECT_BRANCH = "${env.GIT_BRANCH}".replaceFirst("origin/","")
             }
             steps {
+                script {
                 milestone 1
 
                 unstash 'sources'
                 //unstash 'sources-tools'
 
-                //sh './bm/Scripts/release/step-2-0-0-build-env.sh'
-
-                //load "./bm/Scripts/release/jenkins-env.groovy"
+                //getEnvironementData(filePath: "./step-2-0-0-build-env.sh", DEBUG_RUN: params.DEBUG_RUN)
 
                 echo "PULL_REQUEST_ID : ${env.PULL_REQUEST_ID}"
                 echo "BRANCH_JIRA : ${env.BRANCH_JIRA}"
@@ -401,9 +401,7 @@ exit 0
                 echo "TARGET_TAG : ${env.TARGET_TAG}"
                 echo "RELEASE_VERSION : ${env.RELEASE_VERSION}"
                 echo "SONAR_USER_HOME : ${env.SONAR_USER_HOME}"
-
-                //sh 'echo TERM = $TERM && echo USER = $USER && id && ping -c 3 sonar.nabla.mobi'
-
+                } // script
             } // steps
             post {
                 success {
@@ -442,198 +440,25 @@ exit 0
                                     //unstash 'sources'
                                     //unstash 'sources-tools'
 
-                                     String MAVEN_OPTS = ["-Djava.awt.headless=true",
-                                        //"-Dsun.zip.disableMemoryMapping=true",
-                                         //"-Dmaven.repo.local=./.repository",
-                                         "-Xmx2G",
-                                        "-Djava.io.tmpdir=./target/tmp"].join(" ")
+                                    //profile: "sonar,run-integration-test"
 
-                                    if (params.CLEAN_RUN) {
-                                        sh "./clean.sh"
+                                    withMavenWrapper(goal: "install",
+                                        profile: "sonar",
+                                        skipSonar: false,
+                                        skipPitest: true,
+                                        buildCmdParameters: "-Dserver=jetty9x",
+                                        artifacts: "**/target/**.jar, **/target/**.war, **/target/*.zip") {
+
                                     }
 
-                                    if (params.DRY_RUN) {
-                                        MAVEN_OPTS = ["${MAVEN_OPTS}",
-                                                      "-Denforcer.skip=true",
-                                                     ].join(" ")
-                                    }
-
-                                    if (params.DEBUG_RUN) {
-                                        echo "debug added"
-                                        MAVEN_OPTS = ["${MAVEN_OPTS}",
-                                            "-XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:gc.log -XX:+HeapDumpOnOutOfMemoryError",
-                                        ].join(" ")
-
-                                        sh 'echo TERM = $TERM && echo USER = $USER && id && cat /etc/hostname && ping -c 3 alm-sonar.misys.global.ad'
-                                     }
-
-                                    echo "Maven OPTS have been specified: ${MAVEN_OPTS}"
-
-                                    configFileProvider([configFile(fileId: 'fr-maven-default',  targetLocation: 'gsettings.xml', variable: 'SETTINGS_XML')]) {
-                                        //withMaven(
-                                        //    maven: 'maven-latest',
-                                        //    jdk: 'java-latest',
-                                        //    globalMavenSettingsConfig: 'fr-maven-default',
-                                        //    mavenLocalRepo: './.repository',
-                                        //    mavenOpts: "${MAVEN_OPTS}",
-                                        //    options: [
-                                        //        pipelineGraphPublisher(
-                                        //            ignoreUpstreamTriggers: !isReleaseBranch(),
-                                        //            skipDownstreamTriggers: !isReleaseBranch(),
-                                        //            lifecycleThreshold: 'deploy'
-                                        //        ),
-                                        //        artifactsPublisher(disabled: true)
-                                        //    ]
-                                        //) {
-                                            // TODO https://devhub.io/repos/linagora-docker-sonarqube-pr
-                                            withSonarQubeEnv("${env.SONAR_INSTANCE}") {
-                                                env.RELEASE_VERSION = getReleasedVersion()
-                                                env.TARGET_TAG = getShortReleasedVersion()
-                                                echo "Maven RELEASE_VERSION: ${env.RELEASE_VERSION} - ${env.TARGET_TAG}"
-
-                                                manager.addShortText("${TARGET_TAG}")
-
-                                                sh 'echo SONAR_USER_HOME : ${SONAR_USER_HOME} && mkdir -p ${SONAR_USER_HOME}'
-
-                                                if (params.RELEASE) {
-                                                  if (params.RELEASE_VERSION == "") {
-                                                    env.RELEASE_VERSION = params.RELEASE_BASE
-                                                  } else {
-                                                    env.RELEASE_VERSION = params.RELEASE_VERSION
-                                                  }
-                                                  substitutePomXmlVersion {
-                                                    newVersion = env.RELEASE_VERSION
-                                                  }
-                                                }
-
-                                                String MAVEN_GOALS = ["-e -Dsurefire.useFile=false",
-                                                     //"-f ${MAVEN_ROOT_POM}",
-                                                     "-s ${SETTINGS_XML}",
-                                                     //"-T3",
-                                                     //"-Dakka.test.timefactor=2",
-                                                     //"-Dcargo.rmi.port=${params.CARGO_RMI_PORT} -Djetty.http.port=9190 -Dwebdriver.base.url=http://localhost:9190/ -Dwebdriver.chrome.driver=/usr/lib/chromium-browser/chromedriver -DSTOP.PORT=19097 -DSTOP.KEY=STOP",
-                                                     "-Djacoco.outputDir=./target",
-                                                        "-Dserver=jetty9x",
-                                                     "-Psonar,jacoco,run-integration-test"].join(" ")
-
-                                                if (params.CLEAN_RUN) {
-                                                    MAVEN_GOALS = ["${MAVEN_GOALS}",
-                                                                  "-U",
-                                                                 ].join(" ")
-                                                }
-
-                                                if (!params.DRY_RUN) {
-                                                    MAVEN_GOALS = ["${MAVEN_GOALS}",
-                                                        "install"].join(" ")
-                                                } else {
-                                                    MAVEN_GOALS = ["${MAVEN_GOALS}",
-                                                        "validate",
-                                                        "-Dsonar.analysis.mode=preview",
-                                                        ].join(" ")
-                                             }
-
-                                                if ((env.BRANCH_NAME == 'develop') || (env.BRANCH_NAME ==~ /PR-.*/) || (env.BRANCH_NAME ==~ /feature\/.*/) || (env.BRANCH_NAME ==~ /bugfix\/.*/)) {
-                                                    if (!params.DRY_RUN && !params.RELEASE) {
-                                                        echo "pitest added"
-                                                        MAVEN_GOALS = ["${MAVEN_GOALS}",
-                                                            "-DwithHistory",
-                                                            "org.pitest:pitest-maven:mutationCoverage "].join(" ")
-                                                    } // if DRY_RUN
-                                                }
-
-                                                if ((env.BRANCH_NAME ==~ /PR-.*/) || (env.BRANCH_NAME ==~ /feature\/.*/) || (env.BRANCH_NAME ==~ /bugfix\/.*/)) {
-                                                    echo "sonar added"
-                                                    sonar = load "getSonarInclusionsForCommit.groovy"
-                                                    def sonarExclusions = "'*'"
-                                                    def sonarInclusions = "'*'"
-                                                    //def sonarInclusions = getSonarInclusionsForCommit{ }.join(",")
-                                                    echo "Sonar Inclusions: ${sonarInclusions}"
-                                                    MAVEN_GOALS += " -Dsonar.inclusions=${sonarInclusions}"
-                                                    MAVEN_GOALS += " -Dsonar.exclusions=${sonarExclusions}"
-
-                                                    //"-Dsonar.branch.name=${SONAR_BRANCH}",
-                                                    if (env.BRANCH_NAME ==~ /develop/) {
-                                                        MAVEN_GOALS += "-Dsonar.branch.name=develop"
-                                                    } else {
-                                                        MAVEN_GOALS += "-Dsonar.branch.name=${env.BRANCH_NAME}"
-                                                        MAVEN_GOALS += "-Dsonar.branch.target=develop"
-                                             }
-                                                    //" org.sonarsource.scanner.maven:sonar-maven-plugin:3.4.0.905:sonar ",
-                                                    MAVEN_GOALS += "sonar:sonar"
-                                                    //" -Dsonar.organization=misys -Dsonar.host.url='https://alm-sonar.misys.global.ad' -Dsonar.login=ce1fc929ea67fa7d5e3f169db3f99cfe5361cbc5 ",
-                                                    //" -Dsonar.analysis.mode=preview -Dsonar.github.pullRequest=${prNo} -Dsonar.github.oauth=${githubToken} -Dsonar.github.repository=${repoSlug} -Dsonar.github.endpoint=https://api.github.com/ "
-                                                    //-Dsonar.analysis.scmRevision=628f5175ada0d685fd7164baa7c6382c1f25cab4 -Dsonar.analysis.buildNumber=12345
-                                                    MAVEN_GOALS = ["${MAVEN_GOALS}",
-                                                        " -Dsonar.host.url='https://sonardev.misys.global.ad/' -Dsonar.login=c71b002ba25ba981183379e2ae9baa272a8eb79a ",
-                                                        //" -Dissueassignplugin.enabled=false -Dsonar.pitest.mode=skip -Dsonar.scm.user.secured=false ",
-                                                        //" -Dsonar.scm.enabled=false -Dsonar.scm-stats.enabled=false ",
-                                                        //" -Denforcer.skip=false ",
-                                                        " -Dmaven.test.failure.ignore=false -Dmaven.test.failure.skip=false "].join(" ")
-                                                }
-
-                                                if ((env.BRANCH_NAME ==~ /release\/.*/) || (env.BRANCH_NAME ==~ /master\/.*/)) {
-                                                 echo "skip test added"
-                                                    MAVEN_GOALS = ["${MAVEN_GOALS}",
-                                                        " -Dmaven.test.failure.ignore=true -Dmaven.test.failure.skip=true "].join(" ")
-                                             }
-
-                                             echo "Maven GOALS have been specified: ${MAVEN_GOALS}"
-
-                                                if (!params.RELEASE) {
-                                             wrap([$class: 'Xvfb', autoDisplayName: false, additionalOptions: '-pixdepths 24 4 8 15 16 32', parallelBuild: true]) {
-                                                 // Run the maven build
-                                                 sh "./mvnw ${MAVEN_GOALS}"
-                                                        writeFile file: '.archive-jenkins-maven-event-spy-logs', text: ''
-                                             } // Xvfb
-                                                }
-                                            } // withSonarQubeEnv
-                                        //} // withMaven
-                                     } // configFileProvider
-
-                                    shellcheckExitCode = sh(
-                                        script: 'shellcheck -f checkstyle *.sh > checkstyle.xml',
-                                        returnStdout: true,
-                                        returnStatus: true
-                                    )
-                                    sh "echo ${shellcheckExitCode}"
+                                    withShellCheckWrapper(pattern: "*.sh")
 
                                     //stash includes: 'target/, .bower/, .tmp/, .git/, .repository/, .mvn/, bower_components/, node/, node_modules/, npm/, coverage/, build/, docs/', name: 'disposable'
                                     stash includes: 'node_modules/**/*', name: 'node_modules'
-                                    stash allowEmpty: true, includes: 'target/jacoco*.exec, target/lcov*.info, karma-coverage/**/*', name: 'coverage'
-                                    stash includes: "${ARTIFACTS}", name: 'maven-artifacts'
-                                    stash includes: "**/target/classes/**", name: 'classes'
-                                    dir('target') {stash name: 'app', includes: '*.war, *.jar'}
-
-                                    step([
-                                        $class: "WarningsPublisher",
-                                        canComputeNew: false,
-                                        canResolveRelativePaths: false,
-                                        canRunOnFailed: true,
-                                        consoleParsers: [
-                                            [
-                                                parserName: 'Java Compiler (javac)'
-                                            ],
-                                            [
-                                                parserName: 'Maven'
-                                             ],
-                                             [
-                                                 parserName: 'GNU Make + GNU C Compiler (gcc)', pattern: 'error_and_warnings.txt'
-                                             ],
-                                             [
-                                                 parserName: 'Clang (LLVM based)', pattern: 'error_and_warnings_clang.txt'
-                                            //],
-                                            //[
-                                            //    parserName: 'JSLint',
-                                            //    pattern: 'pmd.xml'
-                                            ]
-                                        ],
-                                        //unstableTotalAll: '10',
-                                        //unstableTotalHigh: '0',
-                                        //failedTotalAll: '10',
-                                        //failedTotalHigh: '0',
-                                        usePreviousBuildAsReference: true,
-                                        useStableBuildAsReference: true
-                                        ])
+                                    //stash allowEmpty: true, includes: 'target/jacoco*.exec, target/lcov*.info, karma-coverage/**/*', name: 'coverage'
+                                    //stash includes: "${ARTIFACTS}", name: 'maven-artifacts'
+                                    //stash includes: "**/target/classes/**", name: 'classes'
+                                    //dir('target') {stash name: 'app', includes: '*.war, *.jar'}
 
                                     step([
                                         $class: 'CoberturaPublisher',
@@ -652,32 +477,9 @@ exit 0
 
                                     step([$class: "TapPublisher", testResults: "target/yslow.tap"])
 
-                                    script {
-                                        shellcheckExitCode = sh(
-                                            script: 'shellcheck -f checkstyle *.sh > checkstyle.xml',
-                                            returnStdout: true,
-                                            returnStatus: true
-                                        )
-                                        sh "echo ${shellcheckExitCode}"
-                                    } // script
-
-                                    checkstyle canComputeNew: false, defaultEncoding: '', healthy: '50', pattern: '**/checkstyle.xml', shouldDetectModules: true, thresholdLimit: 'normal', unHealthy: '100'
-
                                     //jacoco buildOverBuild: false, changeBuildStatus: false, execPattern: '**/target/**-it.exec'
 
                                     //perfpublisher healthy: '', metrics: '', name: '**/target/surefire-reports/**/*.xml', threshold: '', unhealthy: ''
-
-                                    //step([
-                                    //    $class: 'RobotPublisher',
-                                    //    disableArchiveOutput: false,
-                                    //    logFileName: 'log.html',
-                                    //    otherFiles: '**/*.png',
-                                    //    outputFileName: 'output.xml',
-                                    //    outputPath: '.',
-                                    //    passThreshold: 100,
-                                    //    reportFileName: 'report.html',
-                                    //    unstableThreshold: 0
-                                    //    ])
 
                                     //script {
                                     //
@@ -686,12 +488,60 @@ exit 0
                                     //
                                     //} //script
 
-                                    if (!params.DRY_RUN && !params.RELEASE) {
-                                        junit '**/target/surefire-reports/TEST-*.xml'
-                                    } // if DRY_RUN
-
                                 } // script
                             } // stage Maven
+//                            stage('\u27A1 Build - Scons') {
+//                                script {
+//
+//                                    gitCheckoutTEST()
+//
+//                                    dir ("test/") {
+//                                        script {
+//                                            //unstash 'git'
+//                                            //unstash 'sources'
+//                                            unstash 'maven-artifacts'
+//
+//                                            dir ("Almonde/") {
+//
+//                                                try {
+//
+//                                                    if (params.CLEAN_RUN) {
+//                                                        env.SCONS_OPTS += "--cache-disable"
+//                                                        //sh "rm -f .sconsign.dblite"
+//                                                    }
+//
+//                                                    echo "Scons OPTS have been specified: ${env.SCONS_OPTS}"
+//
+//                                                    getEnvironementData(filePath: "./bm/Scripts/release/step-2-0-0-build-env.sh", DEBUG_RUN: params.DEBUG_RUN)
+//
+//                                                    ansiColor('xterm') {
+//sh '''
+//#set -e
+//set -xv
+//
+//echo "${SCONS} ${SCONS_OPTS}"
+//echo "GIT_REVISION: ${GIT_REVISION}"
+//
+//./step-2-2-build.sh
+//
+//exit 0
+//'''
+//                                                    } //ansiColor
+//
+//                                                    stash includes: "${ARTIFACTS}", name: 'scons-artifacts'
+//                                                    stash includes: "bw-outputs/*", name: 'bw-outputs'
+//
+//                                                } catch (e) {
+//                                                    step([$class: 'ClaimPublisher'])
+//                                                    throw e
+//                                                }
+//
+//                                            } // dir
+//
+//                                        } // script
+//                                    } // dir
+//                                } // steps
+//                            } // stage Scons
                         } // script
                     } // steps
                     post {
@@ -711,7 +561,7 @@ exit 0
                             registryUrl DOCKER_REGISTRY_URL
                             registryCredentialsId DOCKER_REGISTRY_CREDENTIAL
                             args DOCKER_OPTS
-                            label 'docker-inside'
+                            label 'docker-compose'
                         }
                     }
                     when {
@@ -723,34 +573,19 @@ exit 0
                                     script {
                                     if (!params.DRY_RUN && !params.RELEASE) {
 
+                                         //checkout scm
+
                                          unstash 'sources'
                                          unstash 'sources-tools'
                                          //unstash 'disposable'
+                                         //buildCmdParameters: "-Dserver=jetty9x -Dskip.npm -Dskip.yarn -Dskip.bower -Dskip.grunt -Dmaven.exec.skip=true -Denforcer.skip=true -Dmaven.test.skip=true"
 
-                                         configFileProvider([configFile(fileId: 'fr-maven-default',  targetLocation: 'gsettings.xml', variable: 'SETTINGS_XML')]) {
-                                            withMaven(
-                                                maven: 'maven-latest',
-                                                jdk: 'java-latest',
-                                                globalMavenSettingsConfig: 'fr-maven-default',
-                                                mavenLocalRepo: './.repository',
-                                                options: [
-                                                    pipelineGraphPublisher(
-                                                        ignoreUpstreamTriggers: !isReleaseBranch(),
-                                                        skipDownstreamTriggers: !isReleaseBranch(),
-                                                        lifecycleThreshold: 'deploy'
-                                                        ),
-                                                    artifactsPublisher(disabled: true)
-                                                ]
-                                            ) {
-                                                // Run the maven build
-                                                sh "./mvnw -s ${SETTINGS_XML} site -Dserver=jetty9x -Dskip.npm -Dskip.yarn -Dskip.bower -Dskip.grunt -Denforcer.skip=true -Dmaven.test.skip=true"
-                                            } // withMaven
-                                            //sh "grunt ngdocs"
-                                        } // configFileProvider
+                                         withMavenSiteWrapper(buildCmdParameters: "-Dserver=jetty9x")
+
                                     } // if DRY_RUN
-                                    } //script
+                                } // script
                             } // stage Site
-                        } //script
+                        } // script
                     } // steps
                     post {
                         success {
@@ -769,7 +604,7 @@ exit 0
                             registryUrl DOCKER_REGISTRY_URL
                             registryCredentialsId DOCKER_REGISTRY_CREDENTIAL
                             args DOCKER_OPTS
-                            label 'docker-inside'
+                            label 'docker-compose'
                         }
                     }
                     when {
@@ -782,150 +617,30 @@ exit 0
                                     if (!params.DRY_RUN && !params.RELEASE) {
                                         //input id: 'DependencyCheck', message: 'Approve DependencyCheck?', submitter: 'aandrieu'
 
+                                        //checkout scm
+
                                         unstash 'sources'
                                         unstash 'sources-tools'
 
-                                        configFileProvider([configFile(fileId: 'fr-maven-default',  targetLocation: 'gsettings.xml', variable: 'SETTINGS_XML')]) {
-                                            withMaven(
-                                                maven: 'maven-latest',
-                                                jdk: 'java-latest',
-                                                globalMavenSettingsConfig: 'fr-maven-default',
-                                                mavenLocalRepo: './.repository',
-                                                options: [
-                                                    pipelineGraphPublisher(
-                                                        ignoreUpstreamTriggers: !isReleaseBranch(),
-                                                        skipDownstreamTriggers: !isReleaseBranch(),
-                                                        lifecycleThreshold: 'deploy'
-                                                        ),
-                                                    artifactsPublisher(disabled: true)
-                                                ]
-                                            ) {
-                                                // Run the maven build
-                                                sh "./mvnw -s ${SETTINGS_XML} org.owasp:dependency-check-maven:check -Dserver=jetty9x -Dskip.npm -Dskip.yarn -Dskip.bower -Dskip.grunt -Denforcer.skip=true -Dmaven.test.skip=true"
-                                            } //withMaven
+                                        //buildCmdParameters: "-Dserver=jetty9x -Dskip.npm -Dskip.yarn -Dskip.bower -Dskip.grunt -Dmaven.exec.skip=true -Denforcer.skip=true -Dmaven.test.skip=true"
+
+                                        withMavenDependencyCheckWrapper(buildCmdParameters: "-Dserver=jetty9x")
                                             //sh "nsp check"
 
-                                            dependencyCheckPublisher canComputeNew: false, defaultEncoding: '', healthy: '50', pattern: '**/dependency-check-report.xml ', shouldDetectModules: true, thresholdLimit: 'normal', unHealthy: '100'
-                                        } // configFileProvider
-
                                         } // if DRY_RUN
-                                    } //script
+                                } // script
                             } // stage Security - Dependency check
                             stage('\u2795 Quality - Security - Checkmarx') {
                                 script {
 
-                                     if (!params.DRY_RUN && !params.RELEASE) {
-
-                                         def userInput = true
-                                         def didTimeout = false
-                                         def userAborted = false
-                                         def startMillis = System.currentTimeMillis()
-                                         def timeoutMillis = 10000
-
-                                         try {
-                                             timeout(time: 15, unit: 'SECONDS') { // change to a convenient timeout for you
-                                                     userInput = input(
-                                                     id: 'Checkmarx', message: 'Skip Checkmarx?', parameters: [
-                                                     [$class: 'BooleanParameterDefinition', defaultValue: false, description: '', name: 'Please confirm you agree with this']
-                                                     ])
-                                             }
-                                         } catch (org.jenkinsci.plugins.workflow.steps.FlowInterruptedException e) {
-                                           cause = e.causes.get(0)
-                                           echo "Aborted by " + cause.getUser().toString()
-                                           if (cause.getUser().toString() != 'SYSTEM') {
-                                             startMillis = System.currentTimeMillis()
-                                           } else {
-                                             endMillis = System.currentTimeMillis()
-                                             if (endMillis - startMillis >= timeoutMillis) {
-                                               echo "Approval timed out. Continuing with deployment."
-                                             } else {
-                                               userAborted = true
-                                               echo "SYSTEM aborted, but looks like timeout period didn't complete. Aborting."
-                                             }
-                                           }
-                                         } catch(err) { // timeout reached or input false
-                                             def user = err.getCauses()[0].getUser()
-                                             if('SYSTEM' == user.toString()) { // SYSTEM means timeout.
-                                                 didTimeout = true
-                                             } else {
-                                                 userInput = false
-                                                 echo "Aborted by: [${user}]"
-                                             }
-                                         }
-
-                                         if (didTimeout) {
-                                             echo "no input was received before timeout"
+                                     //checkout scm
 
                                              unstash 'sources'
                                              //unstash 'sources-tools'
-                                             //unstash 'disposable'
 
-                                     step([
-                                         $class: 'CxScanBuilder',
-                                         avoidDuplicateProjectScans: true,
-                                         comment: '',
-                                         excludeFolders: '.repository, target, .node_cache, .tmp, .node_tmp, .git, .grunt, .bower, .mvn, bower_components, node_modules, npm, node, lib, libs, docs, hooks, help, test, Sample, vendors, dist, build, site, fonts, images, coverage, .mvn, ansible, bm',
-                                         excludeOpenSourceFolders: '',
-                                         exclusionsSetting: 'job',
-                                         failBuildOnNewResults: true,
-                                         failBuildOnNewSeverity: 'HIGH',
-                                         filterPattern: '''
-!**/_cvs/**/*, !**/.svn/**/*,   !**/.hg/**/*,   !**/.git/**/*,  !**/.bzr/**/*, !**/bin/**/*,
-!**/obj/**/*,  !**/backup/**/*, !**/.idea/**/*, !**/*.DS_Store, !**/*.ipr,     !**/*.iws,
-!**/*.bak,     !**/*.tmp,       !**/*.aac,      !**/*.aif,      !**/*.iff,     !**/*.m3u, !**/*.mid, !**/*.mp3,
-!**/*.mpa,     !**/*.ra,        !**/*.wav,      !**/*.wma,      !**/*.3g2,     !**/*.3gp, !**/*.asf, !**/*.asx,
-!**/*.avi,     !**/*.flv,       !**/*.mov,      !**/*.mp4,      !**/*.mpg,     !**/*.rm,  !**/*.swf, !**/*.vob,
-!**/*.wmv,     !**/*.bmp,       !**/*.gif,      !**/*.jpg,      !**/*.png,     !**/*.psd, !**/*.tif, !**/*.swf,
-!**/*.jar,     !**/*.zip,       !**/*.rar,      !**/*.exe,      !**/*.dll,     !**/*.pdb, !**/*.7z,  !**/*.gz,
-!**/*.tar.gz,  !**/*.tar,       !**/*.gz,       !**/*.ahtm,     !**/*.ahtml,   !**/*.fhtml, !**/*.hdm,
-!**/*.hdml,    !**/*.hsql,      !**/*.ht,       !**/*.hta,      !**/*.htc,     !**/*.htd, !**/*.war, !**/*.ear,
-!**/*.htmls,   !**/*.ihtml,     !**/*.mht,      !**/*.mhtm,     !**/*.mhtml,   !**/*.ssi, !**/*.stm,
-!**/*.stml,    !**/*.ttml,      !**/*.txn,      !**/*.xhtm,     !**/*.xhtml,   !**/*.class, !**/*.iml, !Checkmarx/Reports/*.*,
-!**/*.csv,     !**/test/**/*,   !**/*Test.java, !**/*_UT.java,  !**/*_UT.groovy,!**/*_IT.java, !**/*_IT.groovy,  !**/*Test.groovy,
-!**/Sample/**/*, !**/.xrp, !**/.yml,
-!**/.xls, !**/.xlsx, !**/.doc, !**/.pdf, !**/.pfx, !**/.xll,
-!**/.dylib, !**/.lib, !**/.a, !**/.so, !**/.pkg, !**/.swp, !**/.ttf, !**/.msi, !**/.chm,
-''',
-                                        fullScanCycle: 10,
-                                            fullScansScheduled: false,
-                                            generatePdfReport: true,
-                                            highThreshold: 50,
-                                            includeOpenSourceFolders: '',
-                                            incremental: true,
-                                            lowThreshold: 1000,
-                                            mediumThreshold: 100,
-                                            osaArchiveIncludePatterns: '*.zip, *.war, *.ear, *.tgz',
-                                            osaHighThreshold: 10,
-                                            osaInstallBeforeScan: false,
-                                            osaLowThreshold: 1000,
-                                            osaMediumThreshold: 100,
-                                            useOwnServerCredentials: true,
-                                            credentialsId: 'mgr.jenkins.checkmarx',
-                                            //groupId: '7bc62ee5-b91d-4908-aea7-d12f982f70d0',
-                                            //password: '{AQAAABAAAAAQ4zdhkim0EaO0/PY/6/KdHzYOatEHaH/thBW+K7YJmL4=}',
-                                            groupId: '1d9286a6-fc4f-4d65-9010-045ca9032198',
-                                            password: '{AQAAABAAAAAQ1/XWT55MpaM5ha9F+rXg7L51B2fPfoy3Yg6KD7H7e4A=}',
-                                            //preset: '36', // Default checkmarx
-                                            preset: '17', // Default 2014
-                                            projectName: 'MGR_UIComponents_Sample_Checkmarx',
-                                            serverUrl: 'https://par-checkmarx',
-                                            skipSCMTriggers: true,
-                                            sourceEncoding: '1',
-                                            username: '',
-                                            vulnerabilityThresholdEnabled: true,
-                                            vulnerabilityThresholdResult: 'FAILURE',
-                                            waitForResultsEnabled: true
-                                        ])
+                                     echo "TODO"
 
-                                         } else if (userInput == true) {
-                                             // do something
-                                             echo "this was successful"
-                                         } else {
-                                             // do something else
-                                             echo "this was not successful"
-                                             //currentBuild.result = 'FAILURE'
-                                         } // if didTimeout
-                                     } // if DRY_RUN
+                                     //withCheckmarxWrapper(excludeFolders: ", bm", projectName: 'MGR_UIComponents_Sample_Checkmarx')
 
                                 } // script
                             } // stage Security - Checkmarx
@@ -962,30 +677,15 @@ exit 0
                     }
                     steps {
 
-                        script {
-                            if (!params.DRY_RUN && !params.RELEASE) {
-                                unstash 'sources'
-                                //unstash 'coverage'
-                                unstash 'maven-artifacts'
-                                unstash 'classes'
-                                //unstash 'bw-outputs'
-
-                                def scannerHome = tool name: 'Sonar-Scanner-3.2', type: 'hudson.plugins.sonar.SonarRunnerInstallation'
-                                withSonarQubeEnv("${env.SONAR_INSTANCE}") {
-                                    if (env.BRANCH_NAME ==~ /develop/) {
-                                      sh "${scannerHome}/bin/sonar-scanner -Dsonar.branch.name=develop -Dproject.settings=./sonar-project.properties"
-                                    } else {
-                                      sh "${scannerHome}/bin/sonar-scanner -Dsonar.branch.name=${env.BRANCH_NAME} -Dsonar.branch.target=develop -Dproject.settings=./sonar-project.properties"
-                                    }
-                                }
-                            } // if DRY_RUN
-                        } // script
+                        withSonarQubeWrapper() {
+                            unstash 'sources'
+                        }
 
                     } // step
                     post {
-                        //always {
-                        //    cleanWs()
-                        //}
+                        always {
+                            cleanWs()
+                        }
                         success {
                             script {
                                 manager.createSummary("completed.gif").appendText("<h2>3-1 &#2690;</h2>", false)
@@ -1044,19 +744,17 @@ exit 0
                                     //    //TODO docker run sh "docker logs ${container.id}"
                                 //}
                             } // if
-                            } // script
-                        //dockerFingerprintFrom dockerfile: './Dockerfile', image: "${DOCKER_RUNTIME_IMG}"
+                            //dockerFingerprintFrom dockerfile: './Dockerfile', image: "${DOCKER_RUNTIME_IMG}"
+                        } // script
                     } // steps
                     post {
-                        //always {
-                        //    cleanWs()
-                        //}
+                        always {
+                            cleanWs()
+                        }
                         success {
-                            node('docker-inside') {
-                                script {
-                                    manager.createSummary("completed.gif").appendText("<h2>3-2 &#2690;</h2>", false)
-                                } //script
-                            } // node
+                            script {
+                                manager.createSummary("completed.gif").appendText("<h2>3-2 &#2690;</h2>", false)
+                            } //script
                         } // success
                     } // post
                 } // stage Runtime - Docker
@@ -1070,14 +768,22 @@ exit 0
                 expression { BRANCH_NAME ==~ /(none)/ }
             }
             agent {
-                node {
-                    label 'kgrdb01'
+                docker {
+                    image DOCKER_IMAGE
+                    //image "docker/compose:1.22.0"
+                    reuseNode true
+                    registryUrl DOCKER_REGISTRY_URL
+                    registryCredentialsId DOCKER_REGISTRY_CREDENTIAL
+                    args DOCKER_OPTS
+                    //args "--dns-search=misys.global.ad --entrypoint='/bin/sh'"
+                    label 'docker-compose'
                 }
             }
                     environment {
                         TARGET_ARCH="_RHEL7"
-                DOCKER_TAG=dockerUtils.buildDockerTag("${env.BRANCH_NAME}", "${env.GIT_COMMIT}")
-                DOCKER_COMPOSE_OPTIONS = "-p ${env.DOCKER_TAG}"
+                DOCKER_TEST_TAG=buildDockerTag("${env.BRANCH_NAME}", "${env.GIT_COMMIT}").toLowerCase()
+                DOCKER_COMPOSE_OPTIONS="-p ${env.DOCKER_TEST_TAG}"
+                DOCKER_COMPOSE_UP_OPTIONS="--force-recreate -d mysql"
                 ROBOT_RESULTS_PATH="/tmp/robot-${env.GIT_COMMIT}-${env.BUILD_NUMBER}"
                 ADDITIONAL_ROBOT_OPTS="-s PipelineTests.TEST"
                     }
@@ -1085,8 +791,13 @@ exit 0
                         script {
                                 if (!params.DRY_RUN && !params.RELEASE) {
                         try {
-                            //unstash 'sources'
+
+                            //checkout scm
+
+                            unstash 'sources'
                             //unstash 'sources-tools'
+
+                            echo "TODO : ${DOCKER_TEST_TAG}"
 
                             sh '''./docker-compose-down.sh'''
                             sh '''./docker-compose-up.sh'''
@@ -1117,40 +828,36 @@ exit 0
                               reportFiles: 'indexNABLA.html',
                               reportName: "NABLATest Report"
                             ])
-                                }
-                                catch(exc) {
-                                    echo 'Error: There were errors in tests. '+exc.toString()
-                                    error 'There are errors in tests'
-                                }
 
-                            } // if DRY_RUN
-                        } // script
-                    } // steps
-                    post {
-                always {
-                    script {
+                            //sh '''for i in $(docker-compose -f ./docker-compose.yml ${DOCKER_COMPOSE_OPTIONS} ps -q); do docker container logs --details $i >& ${WORKSPACE}/docker/run/logs$(docker inspect --format='{{.Name}}' $i).docker.log; done'''
 
-                        try {
-                            //unstash 'sources'
-                            sh '''for i in $(docker-compose -f ./docker-compose.yml ${DOCKER_COMPOSE_OPTIONS} ps -q); do docker container logs --details $i >& ${WORKSPACE}/docker/run/logs$(docker inspect --format='{{.Name}}' $i).docker.log; done'''
-                            //sh '''./docker-compose-down.sh'''
-                            //sh '''rm -f ${WORKSPACE}/docker/run/logs/*'''
-                            //sh '''mkdir -p ${WORKSPACE}/docker/run/logs'''
+                        } catch(exc) {
+                            echo 'Error: There were errors in tests. '+exc.toString()
+                            error 'There are errors in tests'
+                        } finally {
+                            try {
+                                sh '''docker-compose -f ./docker-compose.yml ${DOCKER_COMPOSE_OPTIONS} ps -q'''
+                                //sh '''rm -f ${WORKSPACE}/docker/run/logs/*'''
+                                //sh '''mkdir -p ${WORKSPACE}/docker/run/logs''
+                            }
+                            catch(exc) {
+                                echo 'Warn: There was a problem taking down the docker-compose network. '+exc.toString()
+                            } finally {
+                                sh '''./docker-compose-down.sh'''
+                            }
                         }
-                        catch(exc) {
-                            echo 'Warn: There was a problem taking down the docker-compose network. '+exc.toString()
-                        }
-                    } // script
-                }
-                        success {
-                                script {
-                                    manager.createSummary("completed.gif").appendText("<h2>4-1 &#2690;</h2>", false)
-                                } //script
-                        } // success
-                    } // post
-                } // stage Automated Acceptance Testing
-            } // parallel
-        } // stage  Gather
+
+                    } // if DRY_RUN
+                } // script
+            } // steps
+            post {
+                success {
+                        script {
+                            manager.createSummary("completed.gif").appendText("<h2>4-1 &#2690;</h2>", false)
+                        } //script
+                } // success
+            } // post
+        } // stage Automated Acceptance Testing
 
         stage('\u277A Push') {
             failFast true
@@ -1172,53 +879,38 @@ exit 0
                     steps {
                         //milestone 3
                         script {
-                            if (!params.DRY_RUN) {
 
-                                //timeout(time:1, unit:'HOURS') {
-                                //    input message:'Approve deployment?', submitter: 'aandrieu'
-                                //}
-                                unstash 'sources'
-                                unstash 'sources-tools'
-                                //unstash 'node_modules'
-                                //unstash 'maven-artifacts'
-                                //unstash 'disposable'
+                        //timeout(time:1, unit:'HOURS') {
+                        //    input message:'Approve deployment?', submitter: 'aandrieu'
+                        //}
+                        unstash 'sources'
+                        unstash 'sources-tools'
+                        //unstash 'node_modules'
+                        //unstash 'maven-artifacts'
+                        //unstash 'disposable'
 
-                                configFileProvider([configFile(fileId: 'fr-maven-default',  targetLocation: 'gsettings.xml', variable: 'SETTINGS_XML')]) {
+                        //"-Dmaven.exec.skip=true -Dskip.npm -Dskip.yarn -Dskip.bower -Dskip.grunt -Denforcer.skip=true -Dmaven.test.skip=true"
 
-                                    withMaven(
-                                        maven: 'maven-latest',
-                                        jdk: 'java-latest',
-                                        globalMavenSettingsConfig: 'fr-maven-default',
-                                        mavenLocalRepo: './.repository',
-                                        options: [
-                                            pipelineGraphPublisher(
-                                                ignoreUpstreamTriggers: !isReleaseBranch(),
-                                                skipDownstreamTriggers: !isReleaseBranch(),
-                                                lifecycleThreshold: 'deploy'
-                                                ),
-                                            artifactsPublisher(disabled: true)
-                                        ]
-                                    ) {
-                                    // Run the maven build
-                                            sh "./mvnw -s ${SETTINGS_XML} jar:jar deploy:deploy -Dserver=jetty9x -Dmaven.exec.skip=true -Dskip.npm -Dskip.yarn -Dskip.bower -Dskip.grunt -Denforcer.skip=true -Dmaven.test.skip=true"
-                                    } // withMaven
-                                //sh "npm run publish:all"
-                                } // configFileProvider
+                        withDeploy(buildCmdParameters: "-Dserver=jetty9x") {
 
-                            } // if DRY_RUN
+                            unstash 'maven-artifacts'
 
-                            //manager.addShortText("deployed")
-                            //manager.createSummary("gear2.gif").appendText("<h2>Successfully deployed</h2>", false)
+                            //sh "npm run publish:all"
 
-                            //utils = load "Jenkinsfile-vars"
-                            //utils.cleanAction()
+                        }
+
+                        //manager.addShortText("deployed")
+                        //manager.createSummary("gear2.gif").appendText("<h2>Successfully deployed</h2>", false)
+
+                        //utils = load "Jenkinsfile-vars"
+                        //utils.cleanAction()
 
                         } //script
                     } // steps
                     post {
-                        //always {
-                        //    cleanWs()
-                        //}
+                        always {
+                            cleanWs()
+                        }
                         success {
                                 script {
                                     manager.createSummary("completed.gif").appendText("<h2>5-1 &#2690;</h2>", false)
@@ -1229,9 +921,6 @@ exit 0
                     } // post
                 } // stage Deploy
                 stage('Archive Artifacts') {
-                    when {
-                        expression { BRANCH_NAME ==~ /(release|master|develop)/ }
-                    }
                     agent {
                         docker {
                            image DOCKER_IMAGE
@@ -1246,69 +935,48 @@ exit 0
                         script {
                             unstash 'maven-artifacts'
 
-                            echo "ARTIFACTS : ${ARTIFACTS}"
+                            unstash 'sources'
 
-                            sha1 'target/test.war'
+                            withArchive() {
+                                unstash 'app'
+                                sha1 'target/test.war'
+                            }
 
-                                archiveArtifacts artifacts: "${ARTIFACTS}", excludes: null, fingerprint: true, onlyIfSuccessful: true
+                            publishHTML (target: [
+                              allowMissing: true,
+                              alwaysLinkToLastBuild: false,
+                              keepAll: true,
+                              reportDir: 'reports/',
+                              reportFiles: 'JENKINS_ZAP_VULNERABILITY_REPORT-${BUILD_ID}.html',
+                              reportName: "ZaProxy Report"
+                            ])
 
-							step([
-								$class: 'LogParserPublisher',
-								parsingRulesPath:
-								'/jenkins/deploy-log_parsing_rules',
-								failBuildOnError: false,
-								unstableOnWarning: false,
-								useProjectRule: false
-								])
+                            publishHTML (target: [
+                              allowMissing: true,
+                              alwaysLinkToLastBuild: false,
+                              keepAll: true,
+                              reportDir: 'build/phantomas/',
+                              reportFiles: 'index.html',
+                              reportName: "Phantomas Report"
+                            ])
 
-							step([
-								$class: "AnalysisPublisher",
-								canComputeNew: false,
-								checkStyleActivated: false,
-								defaultEncoding: '',
-								dryActivated: false,
-								findBugsActivated: false,
-								healthy: '',
-								opentasksActivated: false,
-								pmdActivated: false,
-								unHealthy: ''
-								])
+                            publishHTML (target: [
+                              allowMissing: true,
+                              alwaysLinkToLastBuild: false,
+                              keepAll: true,
+                              reportDir: 'screenshots/desktop/',
+                              reportFiles: 'index.html.png',
+                              reportName: "Desktop CSS Diff Report"
+                            ])
 
-                                publishHTML (target: [
-                                  allowMissing: true,
-                                  alwaysLinkToLastBuild: false,
-                                  keepAll: true,
-                                  reportDir: 'reports/',
-                                  reportFiles: 'JENKINS_ZAP_VULNERABILITY_REPORT-${BUILD_ID}.html',
-                                  reportName: "ZaProxy Report"
-                                ])
-
-                                publishHTML (target: [
-                                  allowMissing: true,
-                                  alwaysLinkToLastBuild: false,
-                                  keepAll: true,
-                                  reportDir: 'build/phantomas/',
-                                  reportFiles: 'index.html',
-                                  reportName: "Phantomas Report"
-                                ])
-
-                                publishHTML (target: [
-                                  allowMissing: true,
-                                  alwaysLinkToLastBuild: false,
-                                  keepAll: true,
-                                  reportDir: 'screenshots/desktop/',
-                                  reportFiles: 'index.html.png',
-                                  reportName: "Desktop CSS Diff Report"
-                                ])
-
-                                publishHTML (target: [
-                                  allowMissing: true,
-                                  alwaysLinkToLastBuild: false,
-                                  keepAll: true,
-                                  reportDir: 'screenshots/mobile/',
-                                  reportFiles: 'index.html.png',
-                                  reportName: "Mobile CSS Diff Report"
-                                ])
+                            publishHTML (target: [
+                              allowMissing: true,
+                              alwaysLinkToLastBuild: false,
+                              keepAll: true,
+                              reportDir: 'screenshots/mobile/',
+                              reportFiles: 'index.html.png',
+                              reportName: "Mobile CSS Diff Report"
+                            ])
 
                             //publishHTML (target: [
                             //  allowMissing: true,
@@ -1319,11 +987,10 @@ exit 0
                             //  reportName: "Reports"
                             //])
 
-                                //stash includes: '${ARTIFACTS}', name: 'app'
-                                //unstash 'app'
+                            //stash includes: '${ARTIFACTS}', name: 'app'
+                            //unstash 'app'
 
-                            utils = load "Jenkinsfile-vars"
-                            env.INSTALLER_PATH = utils.getSemVerReleasedVersion()
+                            env.INSTALLER_PATH = getSemVerReleasedVersion()
 
                             //sshPublisher(
                             //    publishers: [
@@ -1347,22 +1014,6 @@ exit 0
                             //            verbose: false)
                             //        ])
 
-                            //nexusArtifactUploader artifacts: [
-                            //    [
-                            //        artifactId: 'arc-package-rhel7',
-                            //        classifier: 'debug',
-                            //        file: 'arc/Almonde/Output/Latest-x86_64-rhel7.tar.gz',
-                            //        type: 'tar.gz'
-                            //    ]
-                            //    ],
-                            //    credentialsId: 'Dantooine',
-                            //    groupId: 'com.finastra.arc',
-                            //    nexusUrl: 'dantooine:8081/nexus',
-                            //    nexusVersion: 'nexus2',
-                            //    protocol: 'http',
-                            //    repository: 'Components',
-                            //    version: '1.7.1'
-
                         } // script
                     } // steps
                     post {
@@ -1385,57 +1036,34 @@ exit 0
                             label 'docker-inside'
                         }
                     }
-                    //when {
-                    //    expression { BRANCH_NAME ==~ /(release|master|develop)/ }
-                    //    }
+                    when {
+                        expression { BRANCH_NAME ==~ /(release|master|develop)/ }
+                    }
                     steps {
-                        //milestone 4
                         script {
+                            //milestone 4
 
                             //unstash 'sources'
                             //unstash 'sources-tools'
                             checkout scm
 
-                            //gitChangelog from: [type: 'REF', value: 'refs/remotes/origin/develop'], ignoreCommitsWithoutIssue: true, returnType: 'STRING', to: [type: 'REF', value: 'refs/tags/LATEST_SUCCESSFULL']
-                            env.TARGET_PROJECT = sh(returnStdout: true, script: "echo ${env.JOB_NAME} | cut -d'/' -f -1").trim()
-
-                            utils = load "Jenkinsfile-vars"
-                            utils.setBuildName()
-                            utils.createVersionTextFile("Test ${env.BRANCH_NAME}","${env.TARGET_PROJECT}_VERSION.TXT")
-
-                            if (!params.DRY_RUN && !params.RELEASE) {
-                                //input id: 'Tag', message: 'Approve Tagging?', submitter: 'aandrieu'
-
-                                //utils.manualPromotion()
-
-                                if (isReleaseBranch()) {
-
-                                    //unstash 'git'
-
-                                    env.TARGET_TAG = utils.getSemVerReleasedVersion()
-                                    //utils.gitTagLocal("${env.TARGET_TAG}_SUCCESSFULL")
-                                    //utils.gitTagRemote("${env.TARGET_TAG}_SUCCESSFULL")
-                                }
-                            } // if DRY_RUN
+                            withTag()
 
                        } // script
                     } // steps
                     post {
-                        //always {
-                        //    cleanWs()
-                        //}
+                        always {
+                            cleanWs()
+                        }
                         failure {
-                            node('docker-inside') {
-                                script {
-                                    //manager.addShortText("X - &#9760;")
-                                    manager.addBadge("red.gif", "<p>&#x2620;</p>")
-                                } //script
-                            } //node
+                            script {
+                                manager.addBadge("red.gif", "<p>&#x2620;</p>")
+                            } //script
                         }
                         success {
-                                script {
-                                    manager.createSummary("completed.gif").appendText("<h2>5.3 &#2690;</h2>", false)
-                                } //script
+                            script {
+                                manager.createSummary("completed.gif").appendText("<h2>5.3 &#2690;</h2>", false)
+                            } //script
                         } // success
                     } // post
                 } // stage Git Tag
@@ -1458,9 +1086,9 @@ exit 0
             }
             environment {
                 TARGET_USER = "jenkins"
-                TARGET_HOST = "FR1CSLFRBM0059.misys.global.ad"
-                INSTALLER_PATH = "1.7.2"
-                TARGET_SHARE_DIR = "/var/www/release/ARC/LatestBuildsUntested/${INSTALLER_PATH}/"
+                TARGET_HOST = "home.nabla.mobi"
+                INSTALLER_PATH = "1.0.0"
+                TARGET_SHARE_DIR = "/var/www/release/${INSTALLER_PATH}/"
             }
             steps {
                 milestone label: 'promote', ordinal: 4
@@ -1470,7 +1098,6 @@ exit 0
                 unstash 'maven-artifacts'
 
                 //sh "scp target/*.war $TARGET_USER@$TARGET_HOST:$TARGET_SHARE_DIR/"
-                //build job: 'ARC-PROMOTE-DEV', parameters: [string(name: 'RELEASE_VERSION', value: '1.7.1.0_1-SNAPSHOT'), string(name: 'INSTALLER_PATH', value: '1.7.2'), string(name: 'GIT_BRANCH_NAME', value: 'develop'), string(name: 'GIT_BRANCH_NAME_BUILDMASTER', value: 'develop'), string(name: 'WORKSPACE_SUFFIX', value: 'Almonde')], quietPeriod: 10
 
             } // steps
         } // stage Promote
@@ -1483,8 +1110,7 @@ exit 0
                 script {
                 echo "Hi there"
                     cleanWs()
-                    //utils = load "Jenkinsfile-vars"
-                    //utils.notifyMe { }
+                    //notifyMe { }
                 } // script
             } // node
         }
